Added upgrade-account component and games premium functionality

--- a/TP2/src/app/components/atoms/card-game/card-game.component.css
+++ b/TP2/src/app/components/atoms/card-game/card-game.component.css
@@ -1,5 +1,20 @@
 .card-game {
 	cursor: pointer;
+	position: relative;
+}
+
+.icon-premium {
+	position: absolute;
+	top: var(--space-x-small);
+	left: var(--space-xx-small);
+}
+
+.img-premium {
+	border: 2px solid var(--golden);
+}
+
+.name-premium {
+	color: var(--golden);
 }
 
 .name {
