--- a/TP2/src/app/components/molecules/category-cards-group/category-cards-group.component.html
+++ b/TP2/src/app/components/molecules/category-cards-group/category-cards-group.component.html
@@ -21,6 +21,7 @@
 				routerLink="/juego/{{ game.id }}"
 				src="{{ game.image }}"
 				name="{{ game.name }}"
+				[premium]="game.premium"
 				search="{{ search }}"
 			></app-card-game>
 		</div>
