--- a/TP2/src/app/components/atoms/success-message/success-message.component.css
+++ b/TP2/src/app/components/atoms/success-message/success-message.component.css
@@ -1,10 +1,7 @@
-p {
-    color: var(--white);
-}
-
 .successMessage {
-    background-color: var(--secondary-dark-2);
-    width: fit-content;
-    padding: 2%;
-    border-radius: 2px;
+	background-color: var(--secondary-dark-2);
+	color: var(--white);
+	padding: var(--space-small);
+	width: 300px;
+	border-radius: 10px;
 }
