--- a/TP2/src/app/components/pages/register/register.component.html
+++ b/TP2/src/app/components/pages/register/register.component.html
@@ -7,42 +7,50 @@
 		</div>
 
 		<form (submit)="register()">
-			<app-input
-				[(value)]="user.username"
-				label="Nombre de usuario"
-			></app-input>
-			<app-error-message *ngIf="usernameError">
-				El nombre de usuario tener al menos 3 caracteres.
-			</app-error-message>
+			<div class="form-item">
+				<app-input
+					[(value)]="user.username"
+					label="Nombre de usuario"
+				></app-input>
+				<app-error-message *ngIf="usernameError">
+					El nombre de usuario tener al menos 3 caracteres.
+				</app-error-message>
+			</div>
 
-			<app-input
-				[(value)]="user.email"
-				label="Correo electronico"
-			></app-input>
-			<app-error-message *ngIf="emailError">
-				El correo electronico debe incluir @ y tener al menos 5
-				caracteres.
-			</app-error-message>
+			<div class="form-item">
+				<app-input
+					[(value)]="user.email"
+					label="Correo electronico"
+				></app-input>
+				<app-error-message *ngIf="emailError">
+					El correo electronico debe incluir @ y tener al menos 5
+					caracteres.
+				</app-error-message>
+			</div>
 
-			<app-input
-				[(value)]="user.password"
-				label="Contraseña"
-				type="password"
-			></app-input>
-			<app-error-message *ngIf="passwordError">
-				La contraseña debe tener al menos 3 caracteres. Las contraseñas
-				deben coincidir.
-			</app-error-message>
+			<div class="form-item">
+				<app-input
+					[(value)]="user.password"
+					label="Contraseña"
+					type="password"
+				></app-input>
+				<app-error-message *ngIf="passwordError">
+					La contraseña debe tener al menos 3 caracteres. Las
+					contraseñas deben coincidir.
+				</app-error-message>
+			</div>
 
-			<app-input
-				[(value)]="confirmPassword"
-				label="Confirmar contraseña"
-				type="password"
-			></app-input>
-			<app-error-message *ngIf="passwordError">
-				La contraseña debe tener al menos 3 caracteres. Las contraseñas
-				deben coincidir.
-			</app-error-message>
+			<div class="form-item">
+				<app-input
+					[(value)]="confirmPassword"
+					label="Confirmar contraseña"
+					type="password"
+				></app-input>
+				<app-error-message *ngIf="passwordError">
+					La contraseña debe tener al menos 3 caracteres. Las
+					contraseñas deben coincidir.
+				</app-error-message>
+			</div>
 
 			<app-success-message class="success-message" *ngIf="showSuccess"
 				>Registro exitoso!
@@ -54,9 +62,9 @@
 					showSuccess
 						? 'w-100 text-black h4 btn-submit'
 						: 'w-100 text-black h4'
-				}}
-				"
-			></app-button>
+				}}"
+			>
+			</app-button>
 		</form>
 		<p class="link" routerLink="/iniciar-sesion">¿Ya tienes una cuenta?</p>
 		<p class="link" routerLink="/">Volver a inicio</p>
