--- a/TP2/src/app/components/pages/playing/playing.component.html
+++ b/TP2/src/app/components/pages/playing/playing.component.html
@@ -7,7 +7,7 @@
 			class="back"
 			name="back"
 			[width]="30"
-			routerLink="/juego/17"
+			routerLink="/juego/{{ id }}"
 		></app-icon>
 		<app-icon
 			class="question"
