Fixed git merge failed (for-playing)

--- a/TP2/src/app/components/pages/for-playing/for-playing.component.html
+++ b/TP2/src/app/components/pages/for-playing/for-playing.component.html
@@ -25,6 +25,11 @@
 	</div>
 	<div class="icons-right">
 		<app-icon
+			name="question"
+			[width]="36"
+			(click)="toggleInfoOverlay()"
+		></app-icon>
+		<app-icon
 			tabindex="0"
 			class="scale-animation"
 			(click)="toggleLike('like')"
