Fixed btn-play and playing page header and footer

--- a/TP2/src/app/app.component.html
+++ b/TP2/src/app/app.component.html
@@ -1,11 +1,10 @@
 <div class="container">
 	<app-spinner-overlay></app-spinner-overlay>
-	<app-header [class.hidden]="router.url == '/jugando'"></app-header>
-	<!-- <div class="scrollable"> -->
-	<div [class.scrollable]="router.url != '/jugando'">
+	<app-header [class.hidden]="isPlayingPage()"></app-header>
+	<div [class.scrollable]="!isPlayingPage()">
 		<section class="router-content">
 			<router-outlet></router-outlet>
 		</section>
-		<app-footer [class.hidden]="router.url == '/jugando'"></app-footer>
+		<app-footer [class.hidden]="isPlayingPage()"></app-footer>
 	</div>
 </div>
