--- a/TP2/src/app/components/pages/login/login.component.html
+++ b/TP2/src/app/components/pages/login/login.component.html
@@ -4,6 +4,16 @@
 		<div class="fondo"></div>
 		<div class="center">
 			<h1>Iniciar Sesión</h1>
+			<p
+				*ngIf="redirect == 'mejorar-cuenta'"
+				class="body-small login-msg"
+			>
+				Para acceder a juegos especiales debes acceder con una cuenta
+				especial!
+			</p>
+			<p *ngIf="redirect == 'favoritos'" class="body-small login-msg">
+				Para agregar juegos a favoritos debes acceder con una cuenta!
+			</p>
 		</div>
 		<form (submit)="login()">
 			<div class="form-item">
