--- a/TP2/src/app/components/pages/playing/playing.component.html
+++ b/TP2/src/app/components/pages/playing/playing.component.html
@@ -1,4 +1,4 @@
-<section class="playing">
+<section *ngIf="id != 0" class="playing">
 	<img src="assets/images/playing.jpg" alt="playing" />
 	<div class="icons-container">
 		<div class="opacity opacity-back"></div>
@@ -21,4 +21,13 @@
 			<app-how-to-play></app-how-to-play>
 		</div>
 	</app-overlay>
+</section>
+<section *ngIf="id == 0" class="playing">
+	<div class="error-msg">
+		<p>
+			No se encontro el juego! Prueba acceder con tu cuenta o adquirir una
+			cuenta especial!
+		</p>
+		<app-button routerLink="/" text="Volver a inicio"></app-button>
+	</div>
 </section>
