--- a/TP2/src/app/components/pages/search/search.component.html
+++ b/TP2/src/app/components/pages/search/search.component.html
@@ -1,48 +1,94 @@
 <section class="search">
-    <h1 class="title">Búsqueda</h1>
-    <form *ngIf="!search" (submit)="searchGame()">
-        <app-input [(value)]="name" label="Busca por nombre"></app-input>
-        <app-select [(value)]="category" label="Categoria" [options]="getCategoriesWithAll()"></app-select>
-        <app-select [(value)]="orden" label="Orden" [options]="['Mas nuevos primero', 'Mas antiguos primero']"></app-select>
-        <app-select [(value)]="premium" label="Premium" [options]="['No especial', 'Especial']"></app-select>
-        <app-button class="button-submit" text="Buscar" classList="w-100" type="submit"></app-button>
-    </form>
-    <section *ngIf="search" class="results">
-        <div class="container-row-quantity-filter">
-            <div class="results-description" [class.results-info]="quantityGames > 0" [class.results-error]="quantityGames == 0">
-                <p>
-                    {{ quantityGames }} juegos coinciden con
-                    <span *ngIf="name.length > 0" class="result-name">
-															{{ name }}
-														</span>
-                    <span *ngIf="name.length < 1"> la búsqueda </span>
-                </p>
-            </div>
-            <div class="container-btn-filter">
-                <button (click)="toggleFilterOverlay()" class="btn-filter">
-														Filtros
-													</button>
-            </div>
-        </div>
-        <div class="results-games">
-            <app-category-cards-group *ngFor="let category of getCategories()" name="{{ category }}" [games]="games.get(category) || []" search="{{ name }}">
-                <span class="badge">{{ games.get(category)!.length }}</span>
-            </app-category-cards-group>
-        </div>
-    </section>
+	<h1 class="title">Búsqueda</h1>
+	<form *ngIf="!search" (submit)="searchGame()">
+		<app-input [(value)]="name" label="Busca por nombre"></app-input>
+		<app-select
+			[(value)]="category"
+			label="Categoria"
+			[options]="getCategoriesWithAll()"
+		></app-select>
+		<app-select
+			[(value)]="orden"
+			label="Orden"
+			[options]="['Mas nuevos primero', 'Mas antiguos primero']"
+		></app-select>
+		<app-select
+			[(value)]="premium"
+			label="Tipo de juego"
+			[options]="['Todos', 'No especial', 'Especial']"
+		></app-select>
+		<app-button
+			class="button-submit"
+			text="Buscar"
+			classList="w-100"
+			type="submit"
+		></app-button>
+	</form>
+	<section *ngIf="search" class="results">
+		<div class="container-row-quantity-filter">
+			<div
+				class="results-description"
+				[class.results-info]="quantityGames > 0"
+				[class.results-error]="quantityGames == 0"
+			>
+				<p>
+					{{ quantityGames }} juegos coinciden con
+					<span *ngIf="name.length > 0" class="result-name">
+						{{ name }}
+					</span>
+					<span *ngIf="name.length < 1"> la búsqueda </span>
+				</p>
+			</div>
+			<div class="container-btn-filter">
+				<button (click)="toggleFilterOverlay()" class="btn-filter">
+					Filtros
+				</button>
+			</div>
+		</div>
+		<div class="results-games">
+			<app-category-cards-group
+				*ngFor="let category of getCategories()"
+				name="{{ category }}"
+				[games]="games.get(category) || []"
+				search="{{ name }}"
+			>
+				<span class="badge">{{ games.get(category)!.length }}</span>
+			</app-category-cards-group>
+		</div>
+	</section>
 </section>
 <div *ngIf="filterOverlayVisible" class="container-overlay">
-    <div (click)="closeFilterOverlay()" class="opacity-overlay">
-        <span (click)="closeFilterOverlay()" class="close">&times;</span>
-    </div>
-    <div class="filter-overlay">
-        <form class="form-overlay" (submit)="searchGameBtnFilter()">
-            <app-input [(value)]="nameFilter" label="Busca por nombre"></app-input>
-            <app-select [(value)]="categoryFilter" label="Categoria" [options]="getCategoriesWithAll()"></app-select>
-            <app-select [(value)]="ordenFilter" label="Orden" [options]="['Mas nuevos primero', 'Mas antiguos primero']">
-            </app-select>
-            <app-select [(value)]="premiumFilter" label="Premium" [options]="['No especial', 'Especial']"></app-select>
-            <app-button class="button-submit" text="Buscar" classList="w-100" type="submit"></app-button>
-        </form>
-    </div>
+	<div (click)="closeFilterOverlay()" class="opacity-overlay">
+		<span (click)="closeFilterOverlay()" class="close">&times;</span>
+	</div>
+	<div class="filter-overlay">
+		<form class="form-overlay" (submit)="searchGameBtnFilter()">
+			<app-input
+				[(value)]="nameFilter"
+				label="Busca por nombre"
+			></app-input>
+			<app-select
+				[(value)]="categoryFilter"
+				label="Categoria"
+				[options]="getCategoriesWithAll()"
+			></app-select>
+			<app-select
+				[(value)]="ordenFilter"
+				label="Orden"
+				[options]="['Mas nuevos primero', 'Mas antiguos primero']"
+			>
+			</app-select>
+			<app-select
+				[(value)]="premiumFilter"
+				label="Premium"
+				[options]="['Todos', 'No especial', 'Especial']"
+			></app-select>
+			<app-button
+				class="button-submit"
+				text="Buscar"
+				classList="w-100"
+				type="submit"
+			></app-button>
+		</form>
+	</div>
 </div>
