--- a/TP2/src/app/components/atoms/card-game/card-game.component.html
+++ b/TP2/src/app/components/atoms/card-game/card-game.component.html
@@ -1,12 +1,17 @@
 <div class="card-game">
-	<app-icon *ngIf="premium" class="icon-premium" name="premium"></app-icon>
-	<img
-		[class.img-premium]="premium"
-		[class.width-250]="width == 250"
-		[class.width-328]="width == 328"
-		[src]="src"
-		alt="game"
-	/>
+	<div [class.img-premium]="premium">
+		<app-icon
+			*ngIf="premium"
+			class="icon-premium"
+			name="premium"
+		></app-icon>
+		<img
+			[class.width-250]="width == 250"
+			[class.width-328]="width == 328"
+			[src]="src"
+			alt="game"
+		/>
+	</div>
 	<p
 		[class.name-premium]="premium"
 		[innerHTML]="getNameText()"
