Improved feedback received

--- a/TP2/src/app/components/pages/search/search.component.css
+++ b/TP2/src/app/components/pages/search/search.component.css
@@ -1,133 +1,121 @@
 .search {
-    margin-bottom: var(--space-xx-large);
+  margin-bottom: var(--space-xx-large);
 }
 
 .title {
-    text-align: center;
-    margin-top: var(--space-x-large);
+  text-align: center;
+  margin-top: var(--space-x-large);
 }
 
 form {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    gap: var(--space-large);
-    margin-top: var(--space-x-large);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: var(--space-large);
+  margin-top: var(--space-x-large);
 }
 
 .button-submit {
-    width: 300px;
+  width: 300px;
 }
 
 .results {
-    margin-top: var(--space-x-large);
-    padding-left: var(--space-medium);
+  margin-top: var(--space-x-large);
+  padding-left: var(--space-medium);
 }
 
 .container-quantity-filter .container-btn-filter {
-    margin-bottom: var(--space-x-small);
+  margin-bottom: var(--space-x-small);
 }
 
 .container-row-quantity-filter {
-    display: flex;
-    justify-content: space-between;
-    margin-bottom: var(--space-large);
-    margin-right: var(--space-medium);
-    gap: var(--space-small);
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: var(--space-large);
+  margin-right: var(--space-medium);
+  gap: var(--space-small);
 }
 
 .results-description {
-    padding: var(--space-medium);
-    flex-grow: 1;
-}
-
-.results-info {
-    background-color: var(--secondary-dark-1);
-    margin: 0;
-}
-
-.results-error {
-    background-color: var(--danger);
-    margin: 0;
+  flex-grow: 1;
 }
 
 .results-info .result-name {
-    color: var(--primary-dark-2);
-    font-weight: bold;
+  font-weight: bold;
 }
 
 .results-error .result-name {
-    color: var(--black);
-    font-weight: bold;
+  font-weight: bold;
 }
 
 .btn-filter {
-    background-color: var(--link-dark);
-    color: var(--white);
-    padding: var(--space-small);
-    cursor: pointer;
-    box-shadow: var(--elevation-2dp);
-    height: 100%;
+  background-color: var(--link-dark);
+  color: var(--white);
+  padding: var(--space-small);
+  cursor: pointer;
+  box-shadow: var(--elevation-2dp);
 }
 
 .filter-overlay {
-    padding-bottom: var(--space-medium);
+  padding-bottom: var(--space-medium);
 }
 
 .badge {
-    background-color: var(--accent);
-    color: var(--white);
-    padding: var(--space-x-small) var(--space-small);
-    border-radius: 50%;
-    font-size: 14px;
+  background-color: var(--accent);
+  color: var(--white);
+  padding: var(--space-x-small) var(--space-small);
+  border-radius: 50%;
+  font-size: 14px;
 }
 
 .container-overlay {
-    display: flex;
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    justify-content: center;
-    align-items: center;
-    z-index: 200;
+  display: flex;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  justify-content: center;
+  align-items: center;
+  z-index: 200;
 }
 
 .opacity-overlay {
-    background-color: var(--black);
-    opacity: 0.9;
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    z-index: 201;
+  background-color: var(--black);
+  opacity: 0.9;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 201;
 }
 
 .close {
-    font-size: 4rem;
-    position: absolute;
-    right: 16px;
-    top: 0px;
-    cursor: pointer;
+  font-size: 4rem;
+  position: absolute;
+  right: 16px;
+  top: 0px;
+  cursor: pointer;
 }
 
 .form-overlay {
-    background-color: var(--primary-dark-1);
-    padding: var(--space-x-large) var(--space-medium);
-    position: relative;
-    z-index: 202;
+  background-color: var(--primary);
+  color: var(--black);
+  border-radius: 20px;
+  padding: var(--space-x-large) var(--space-medium);
+  position: relative;
+  z-index: 202;
 }
 
 .checkbox-container {
-    display: flex;
-    gap: var(--space-small);
-    flex-direction: row-reverse;
-    padding: var(--space-small);
+  display: flex;
+  gap: var(--space-small);
+  flex-direction: row-reverse;
+  padding: var(--space-small);
 }
 
 input.checkbox {
-    width: 20px;
-    height: 20px;
+  width: 20px;
+  height: 20px;
 }
