--- a/TP2/src/app/components/molecules/favorites-cards-group/favorites-cards-group.component.css
+++ b/TP2/src/app/components/molecules/favorites-cards-group/favorites-cards-group.component.css
@@ -1,26 +1,26 @@
 .favorites {
-    margin-bottom: var(--space-x-large);
-    display: flex;
-    justify-content: center;
+  margin-bottom: var(--space-x-large);
+  display: flex;
+  justify-content: center;
 }
 
 .cards-group {
-    display: flex;
-    flex-direction: column;
-    width: fit-content;
-    justify-content: center;
-    gap: var(--space-xx-large);
+  display: flex;
+  flex-direction: column;
+  width: fit-content;
+  justify-content: center;
+  gap: var(--space-x-large);
 }
 
 .name {
-    gap: var(--space-medium);
-    margin-bottom: var(--space-xx-small);
+  gap: var(--space-medium);
+  margin-bottom: var(--space-xx-small);
 }
 
 @media (min-width: 1024px) {
-    .cards-group {
-        gap: var(--space-large);
-        flex-direction: row;
-        flex-wrap: wrap;
-    }
+  .cards-group {
+    gap: var(--space-large);
+    flex-direction: row;
+    flex-wrap: wrap;
+  }
 }
