--- a/TP2/src/app/components/pages/for-playing/for-playing.component.css
+++ b/TP2/src/app/components/pages/for-playing/for-playing.component.css
@@ -1,111 +1,111 @@
 .for-playing {
-	padding: var(--space-medium);
-	margin-bottom: var(--space-x-large);
+  padding: var(--space-medium);
+  margin-bottom: var(--space-x-large);
 }
 
 .top {
-	display: flex;
-	justify-content: space-between;
-	margin-bottom: var(--space-xx-small);
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: var(--space-xx-small);
 }
 
 .link {
-	color: var(--link-light);
+  color: var(--link-light);
 }
 
 .image-container {
-	margin-top: var(--space-medium);
-	position: relative;
-	display: flex;
-	align-items: center;
-	justify-content: center;
-	z-index: 0;
+  margin-top: var(--space-medium);
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  z-index: 0;
 }
 
 .opacity {
-	position: absolute;
-	background-color: var(--black);
-	opacity: 0.4;
-	width: 328px;
-	height: 328px;
-	border-radius: 10px;
+  position: absolute;
+  background-color: var(--black);
+  opacity: 0.4;
+  width: 328px;
+  height: 328px;
+  border-radius: 10px;
 }
 
 .opacity-img {
-	top: 0;
-	left: 0;
+  top: 0;
+  left: 0;
 }
 
 .opacity.opacity-img {
-	z-index: 56;
+  z-index: 56;
 }
 
 .btn-play {
-	position: absolute;
-	z-index: 1;
-	bottom: 20%;
-	animation: wiggle 3s infinite linear;
-	z-index: 99;
+  position: absolute;
+  z-index: 1;
+  bottom: 20%;
+  animation: wiggle 3s infinite linear;
+  z-index: 99;
 }
 
 .icons-right {
-	display: flex;
-	justify-content: center;
-	margin-top: var(--space-medium);
-	gap: var(--space-medium);
+  display: flex;
+  justify-content: center;
+  margin-top: var(--space-medium);
+  gap: var(--space-medium);
 }
 
 .tabs-container {
-	margin-top: var(--space-large);
+  margin-top: var(--space-large);
 }
 
 .multimedia {
-	margin-bottom: var(--space-large);
-	overflow: hidden;
+  margin-bottom: var(--space-large);
+  overflow: hidden;
 }
 
 .multimedia > p {
-	margin-bottom: var(--space-xx-small);
+  margin-bottom: var(--space-xx-small);
 }
 
 .video {
-	position: relative;
-	display: flex;
-	align-items: center;
-	justify-content: center;
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .video-play {
-	position: absolute;
+  position: absolute;
 }
 
 div.image,
 div.image_one {
-	display: contents;
-	position: absolute;
+  display: contents;
+  position: absolute;
 }
 
 div.image img,
 div.image_one img {
-	width: 304px;
+  width: 304px;
 }
 
 .multimedia-flex {
-	display: flex;
-	position: relative;
-	overflow-x: scroll;
-	width: 500%;
-	animation-delay: 4s;
-	animation: automation 20s infinite linear;
-	transition: all 0.75s ease-in;
+  display: flex;
+  position: relative;
+  overflow-x: scroll;
+  width: 500%;
+  animation-delay: 4s;
+  animation: automation 20s infinite linear;
+  transition: all 0.75s ease-in;
 }
 
 .multimedia-flex img {
-	max-width: 100%;
-	max-height: 100%;
+  max-width: 100%;
+  max-height: 100%;
 }
 
-.container-overlay-info {
+/* .container-overlay-info {
 	display: flex;
 	position: absolute;
 	top: 0;
@@ -115,159 +115,154 @@ div.image_one img {
 	justify-content: center;
 	align-items: center;
 	z-index: 200;
-}
+} */
 
-.opacity-overlay {
-	background-color: var(--black);
-	opacity: 0.9;
-	position: absolute;
-	top: 0;
-	left: 0;
-	width: 100%;
-	height: 100%;
-	z-index: 201;
-}
+/* .opacity-overlay {
+  background-color: var(--black);
+  opacity: 0.9;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 201;
+} */
 
-.overlay-info {
-	background-color: var(--primary-light-2);
-	color: var(--primary-dark-2);
-	padding: var(--space-x-large) var(--space-medium);
-	position: relative;
-	z-index: 202;
-}
+/* .overlay-info {
+  background-color: var(--primary-light-2);
+  color: var(--primary-dark-2);
+  padding: var(--space-x-large) var(--space-medium);
+  position: relative;
+  z-index: 202;
+} */
 
-.container-overlay-share {
-	text-align: center;
-	z-index: 200;
-}
+/* .container-overlay-share {
+  text-align: center;
+  z-index: 200;
+} */
 
 .overlay-share {
-	margin-top: var(--space-medium);
-	background-color: var(--primary-light-2);
-	color: var(--primary-dark-2);
-	padding: var(--space-x-large) var(--space-medium);
-	position: relative;
-	z-index: 202;
+  margin-top: var(--space-medium);
+  background-color: var(--primary-light-2);
+  color: var(--primary-dark-2);
+  padding: var(--space-x-large) var(--space-medium);
+  position: relative;
+  z-index: 202;
 }
 
 .container-icons {
-	margin-top: var(--space-medium);
-	display: flex;
-	justify-content: center;
-	gap: var(--space-small);
-}
-
-app-icon {
-	cursor: pointer;
+  margin-top: var(--space-medium);
+  display: flex;
+  justify-content: center;
+  gap: var(--space-small);
 }
 
 .container-url {
-	display: flex;
-	margin-top: var(--space-medium);
-	/* align-items: center; */
+  display: flex;
+  margin-top: var(--space-medium);
 }
 
 .url {
-	overflow: scroll;
-	white-space: nowrap;
-	margin-right: var(--space-x-small);
-	background-color: var(--primary-dark-2);
-	color: var(--white);
-	border-radius: 5px;
-	line-height: 51px;
-	padding-left: var(--space-x-small);
+  overflow: scroll;
+  white-space: nowrap;
+  margin-right: var(--space-x-small);
+  background-color: var(--primary-dark-2);
+  color: var(--white);
+  border-radius: 5px;
+  line-height: 51px;
+  padding-left: var(--space-x-small);
 }
 
 .overlay-info > p {
-	margin-bottom: var(--space-small);
+  margin-bottom: var(--space-small);
 }
 
 .close {
-	font-size: 2rem;
-	position: absolute;
-	right: 16px;
-	top: 0px;
-	cursor: pointer;
+  font-size: 2rem;
+  position: absolute;
+  right: 16px;
+  top: 0px;
+  cursor: pointer;
 }
 
 @keyframes automation {
-	0% {
-		margin-left: 0;
-	}
-	10% {
-		margin-left: 0;
-	}
-	15% {
-		margin-left: -100%;
-	}
-	35% {
-		margin-left: -100%;
-	}
-	40% {
-		margin-left: -200%;
-	}
-	60% {
-		margin-left: -200%;
-	}
-	65% {
-		margin-left: -300%;
-	}
-	75% {
-		margin-left: -300%;
-	}
-	80% {
-		margin-left: -400%;
-	}
-	95% {
-		margin-left: -400%;
-	}
-	100% {
-		margin-left: 0;
-	}
+  0% {
+    margin-left: 0;
+  }
+  10% {
+    margin-left: 0;
+  }
+  15% {
+    margin-left: -100%;
+  }
+  35% {
+    margin-left: -100%;
+  }
+  40% {
+    margin-left: -200%;
+  }
+  60% {
+    margin-left: -200%;
+  }
+  65% {
+    margin-left: -300%;
+  }
+  75% {
+    margin-left: -300%;
+  }
+  80% {
+    margin-left: -400%;
+  }
+  95% {
+    margin-left: -400%;
+  }
+  100% {
+    margin-left: 0;
+  }
 }
 
 .scale-animation:focus {
-	animation: scale-animation 2s linear;
+  animation: scale-animation 2s linear;
 }
 
 .scale-animation:active {
-	animation: none;
+  animation: none;
 }
 
 @keyframes scale-animation {
-	0% {
-		transform: scale(1);
-	}
-	50% {
-		transform: scale(1.5);
-	}
-	100% {
-		transform: scale(1);
-	}
+  0% {
+    transform: scale(1);
+  }
+  50% {
+    transform: scale(1.5);
+  }
+  100% {
+    transform: scale(1);
+  }
 }
 
 @keyframes wiggle {
-	0%,
-	7% {
-		transform: rotateZ(0);
-	}
-	15% {
-		transform: rotateZ(-10deg);
-	}
-	20% {
-		transform: rotateZ(10deg);
-	}
-	25% {
-		transform: rotateZ(-8deg);
-	}
-	30% {
-		transform: rotateZ(6deg);
-	}
-	35% {
-		transform: rotateZ(-4deg);
-	}
-	40%,
-	100% {
-		transform: rotateZ(0);
-	}
+  0%,
+  7% {
+    transform: rotateZ(0);
+  }
+  15% {
+    transform: rotateZ(-10deg);
+  }
+  20% {
+    transform: rotateZ(10deg);
+  }
+  25% {
+    transform: rotateZ(-8deg);
+  }
+  30% {
+    transform: rotateZ(6deg);
+  }
+  35% {
+    transform: rotateZ(-4deg);
+  }
+  40%,
+  100% {
+    transform: rotateZ(0);
+  }
 }
