--- a/TP2/src/app/components/pages/for-playing/for-playing.component.html
+++ b/TP2/src/app/components/pages/for-playing/for-playing.component.html
@@ -1,4 +1,5 @@
 <app-advertising *ngIf="game != undefined"></app-advertising>
+
 <section *ngIf="game != undefined" class="for-playing">
   <div class="top">
     <div>
@@ -9,6 +10,7 @@
     </div>
   </div>
   <h1>{{ game!.name }}</h1>
+
   <div class="image-container">
     <app-button
       class="btn-play"
@@ -24,12 +26,15 @@
       [width]="328"
     ></app-card-game>
   </div>
+
   <div class="icons-right">
-    <app-icon
-      name="question"
-      [width]="30"
-      (click)="toggleInfoOverlay()"
-    ></app-icon>
+    <app-popover name="question" [width]="30">
+      <p>
+        Tus <b>me gusta</b> nos ayudan a recomendarte más juegos de acuerdo a
+        tus gustos!
+      </p>
+      <p>Agrega los juegos que más te gustaron a <b>favoritos</b>!</p>
+    </app-popover>
     <app-icon
       tabindex="0"
       class="scale-animation"
@@ -44,11 +49,28 @@
       name="{{ like == false ? 'dislike-fill' : 'dislike' }}"
       [width]="30"
     ></app-icon>
-    <app-icon
-      name="share"
-      [width]="30"
-      (click)="toggleShareOverlay()"
-    ></app-icon>
+    <app-popover name="share" [width]="30">
+      <div>
+        <p>
+          Compartir <b>{{ game!.name }}</b>
+        </p>
+        <div class="container-icons">
+          <app-icon name="facebook-color" [width]="36"></app-icon>
+          <app-icon name="twitter-color" [width]="36"></app-icon>
+          <app-icon name="whatsapp" [width]="36"></app-icon>
+        </div>
+        <div class="container-url">
+          <p class="url">
+            https://dmfernandez96.github.io/unicen-visualizacion/TP2/EntregaFinal/juego/{{
+              game.id
+            }}
+          </p>
+          <app-button text="Copiar" classList="btn-primary-dark-2">
+          </app-button>
+        </div>
+      </div>
+    </app-popover>
+
     <app-icon
       tabindex="0"
       class="scale-animation"
@@ -56,29 +78,6 @@
       [width]="30"
       (click)="toggleFavorite()"
     ></app-icon>
-  </div>
-
-  <div *ngIf="shareOverlayVisible" class="container-overlay-share">
-    <div (click)="closeShareOverlay()" class="opacity-overlay"></div>
-    <div class="overlay-share">
-      <span (click)="closeShareOverlay()" class="close">&times;</span>
-      <p>
-        Compartir <b>{{ game!.name }}</b>
-      </p>
-      <div class="container-icons">
-        <app-icon name="facebook-color" [width]="36"></app-icon>
-        <app-icon name="twitter-color" [width]="36"></app-icon>
-        <app-icon name="whatsapp" [width]="36"></app-icon>
-      </div>
-      <div class="container-url">
-        <p class="url">
-          https://dmfernandez96.github.io/unicen-visualizacion/TP2/EntregaFinal/juego/{{
-            game.id
-          }}
-        </p>
-        <app-button text="Copiar" classList="btn-primary-dark-2"> </app-button>
-      </div>
-    </div>
   </div>
 
   <div class="tabs-container">
@@ -137,18 +136,8 @@
       </div>
     </app-tab-content>
   </div>
-  <div *ngIf="infoOverlayVisible" class="container-overlay-info">
-    <div (click)="closeInfoOverlay()" class="opacity-overlay"></div>
-    <div class="overlay-info">
-      <span (click)="closeInfoOverlay()" class="close">&times;</span>
-      <p>
-        Tus <b>me gusta</b> nos ayudan a recomendarte más juegos de acuerdo a
-        tus gustos!
-      </p>
-      <p>Agrega los juegos que más te gustaron a <b>favoritos</b>!</p>
-    </div>
-  </div>
 </section>
+
 <section *ngIf="game == undefined" class="for-playing">
   <p>
     No se encontro el juego! Prueba acceder con tu cuenta o adquirir una cuenta
