--- a/TP2/src/app/components/molecules/footer/footer.component.css
+++ b/TP2/src/app/components/molecules/footer/footer.component.css
@@ -1,40 +1,39 @@
 .footer {
-	background-color: var(--gray-dark);
-	/* height: 90px; */
-	width: 100%;
-	display: flex;
-	align-items: center;
-	flex-flow: row wrap-reverse;
-	padding: var(--space-medium);
+    background-color: var(--gray-dark);
+    /* height: 90px; */
+    width: 100%;
+    display: flex;
+    align-items: center;
+    flex-flow: row wrap-reverse;
+    padding: var(--space-small);
 }
 
 .center {
-	text-align: center;
-	display: none;
+    text-align: center;
+    display: none;
 }
 
 .right,
 .left {
-	display: flex;
-	width: 100%;
-	justify-content: center;
+    display: flex;
+    width: 100%;
+    justify-content: center;
 }
 
 .right {
-	gap: var(--space-medium);
-	margin-bottom: var(--space-small);
+    gap: var(--space-medium);
 }
 
 @media (min-width: 1024px) {
-	.footer {
-		justify-content: space-around;
-		flex-flow: nowrap;
-	}
-	.right {
-		gap: var(--space-x-small);
-		margin-bottom: 0px;
-	}
-	.center {
-		display: block;
-	}
+    .footer {
+        justify-content: space-around;
+        flex-flow: nowrap;
+    }
+    .right {
+        gap: var(--space-x-small);
+        margin-bottom: 0px;
+    }
+    .center {
+        display: block;
+    }
 }
