--- a/TP2/src/app/components/molecules/footer/footer.component.html
+++ b/TP2/src/app/components/molecules/footer/footer.component.html
@@ -1,13 +1,13 @@
 <section class="footer">
-	<div class="left">
-		<p>Copyright - 2022</p>
-	</div>
-	<div class="center">
-		<app-logo class="link" routerLink="/"></app-logo>
-	</div>
-	<div class="right">
-		<app-icon name="facebook"></app-icon>
-		<app-icon name="twitter"></app-icon>
-		<app-icon name="instagram"></app-icon>
-	</div>
+    <div class="left">
+        <p>Copyright - 2022</p>
+    </div>
+    <div class="center">
+        <app-logo class="link" routerLink="/"></app-logo>
+    </div>
+    <div class="right">
+        <app-icon [width]="30" name="facebook"></app-icon>
+        <app-icon [width]="30" name="twitter"></app-icon>
+        <app-icon [width]="30" name="instagram"></app-icon>
+    </div>
 </section>
